Fix text alignment in top right

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ img[alt="Odin-logo"] {
 
     font-family: var(--default-font);
 
-    padding-top: 110px;
+    padding-top: 50px;
     padding-left: 50px;
     
     display: flex;
